jhipstersimple-k8s/jhipstersimple-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jhipstersimple
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jhipstersimple
      version: 'v1'
  template:
    metadata:
      labels:
        app: jhipstersimple
        version: 'v1'
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - podAffinityTerm:
                labelSelector:
                  matchExpressions:
                    - key: app
                      operator: In
                      values:
                        - jhipstersimple
                topologyKey: kubernetes.io/hostname
              weight: 100
      containers:
        - name: jhipstersimple-app
          image: u20041-kworker3-dev:5000/jhipstersimple
          resources:
            requests:
              memory: '512Mi'
              cpu: '500m'
            limits:
              memory: '1Gi'
              cpu: '1'
          ports:
            - name: http
              containerPort: 8080
          readinessProbe:
            httpGet:
              path: /management/health
              port: http
            initialDelaySeconds: 20
            periodSeconds: 15
            failureThreshold: 6
          livenessProbe:
            httpGet:
              path: /management/health
              port: http
            initialDelaySeconds: 120
