jhipstersimple-k8s/jhipstersimple-service.yml
apiVersion: v1
kind: Service
metadata:
  name: jhipstersimple
  namespace: jd-n2
  labels:
    app: jhipstersimple
spec:
  selector:
    app: jhipstersimple
  type: LoadBalancer
  ports:
    - name: http
      port: 80
      targetPort: 8080
