jhipstersimple-k8s/jhipstersimple-ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: jhipstersimple
  namespace: jd-ingress
spec:
  rules:
    - host: jhipstersimple.jd-ingress.192.168.99.100.nip.io
      http:
        paths:
          - path: /
            backend:
              serviceName: jhipstersimple
              servicePort: 8080
